manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: workshop
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: kennethreitz/httpbin
          ports:
            - name: http
              containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
    - hosts:
        - workshop.local
      secretName: web-tls
  rules:
    - host: workshop.local
      http:
        paths:
          - path: /front
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
